--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,10 +19,10 @@ const entries = await getAllSortedEntries();
     </Fragment>
     <Fragment slot="title">Jeroen van Wissen</Fragment>
     <div class="mx-auto rounded-lg xl:rounded-br-xl bg-secondary-800 shadow-lg relative">
-        <img src="/images/jeroen.webp" class="hidden xl:object-cover xl:object-left xl:inline-block xl:h-[650px] xl:max-w-[650px] xl:absolute xl:right-0 xl:bottom-0 xl:rounded-none xl:rounded-br-lg" />
+        <img alt="Image of Jeroen van Wissen" src="/images/jeroen.webp" class="hidden xl:object-cover xl:object-left xl:inline-block xl:h-[650px] xl:max-w-[650px] xl:absolute xl:right-0 xl:bottom-0 xl:rounded-none xl:rounded-br-lg" />
         <div class="flex flex-col justify-start items-start gap-3 xl:gap-5 px-4 pt-2.5 pb-5 relative xl:pr-0 xl:pl-5 xl:w-4/5">
             <div class="md:flex justify-center">
-                <img src="/images/jeroen.webp" class="mb-2 w-full max-w-[310px] h-52 md:h-[225px] mx-auto rounded object-cover object-top xl:hidden" />
+                <img alt="Image of Jeroen van Wissen" src="/images/jeroen.webp" class="mb-2 w-full max-w-[310px] h-52 md:h-[225px] mx-auto rounded object-cover object-top xl:hidden" />
                 <p class="md:text-2xl lg:text-3xl xl:text-4xl md:ml-2 xl:ml-0 font-bold text-left text-primary-50">
                     Hey!<br />I’m <span class="text-primary-500">Jeroen</span>, a Front-end Developer from the Netherlands.</span>
                 </p>
@@ -31,7 +31,7 @@ const entries = await getAllSortedEntries();
             <!-- <div class="px-5 py-2 rounded-lg bg-primary-50 hover:bg-primary-300">
                 <p class="text-base font-bold text-primary-800">More about me</p>
             </div> -->
-            <p class="text-sm text-left text-primary-50 md:text-base">Connect with Jeroen van Wissen on <a href="https://linkedin.com/in/jeroenvanwissen" rel="me" title="Connect with me on LinkedIn" class="inline-block align-bottom pb-[2px]"><img src="/images/linkedin.png" class="h-5"/></a></p>
+            <p class="text-sm text-left text-primary-50 md:text-base">Connect with Jeroen van Wissen on <a href="https://linkedin.com/in/jeroenvanwissen" rel="me" title="Connect with me on LinkedIn" class="inline-block align-bottom pb-[2px]"><img src="/images/linkedin.png" alt="LinkedIn logo" class="h-5"/></a></p>
         </div>
     </div>
 </Layout>
