Updates for 1.0.7 release

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ const entries = await getAllSortedEntries();
 
 <Layout>
     <Fragment slot="head">
-        <title>Jeroen van Wissen</title>
+        <title>Jeroen van Wissen - Senior Full Stack JavaScript/TypeScript Engineer</title>
         <meta content="website" property="og:type" />
         <meta content="Jeroen van Wissen" property="og:title" />
         <meta content="Jeroen van Wissen - More than two decades of experience in development, including over five years as a Tech Lead/Engineering Manager" name="description" />
@@ -24,10 +24,10 @@ const entries = await getAllSortedEntries();
             <div class="md:flex justify-center">
                 <img alt="Image of Jeroen van Wissen" src="/images/jeroen.webp" class="mb-2 w-full max-w-[310px] h-52 md:h-[225px] mx-auto rounded object-cover object-top xl:hidden" />
                 <p class="md:text-2xl lg:text-3xl xl:text-4xl md:ml-2 xl:ml-0 font-bold text-left text-primary-50">
-                    Hey!<br />I’m <span class="text-primary-500">Jeroen</span>, a Front-end Developer from the Netherlands.</span>
+                    Hey!<br />I’m <span class="text-primary-500">Jeroen</span>, a Senior Full Stack JavaScript/TypeScript Engineer from the Netherlands.</span>
                 </p>
                 </div>
-            <p class="text-sm text-left text-primary-50 md:text-base">With more than two decades of experience in development, including over five years as a Tech Lead/Engineering Manager, I have refined my skills and expertise. While I began my journey with PHP, my focus has now shifted entirely to JavaScript, specifically ReactJS and NodeJS. I am a versatile and passionate professional, dedicated to finding solutions and constantly seeking opportunities for growth. Additionally, I possess hands-on experience with AWS DevOps and GitLab CI/CD, enhancing my proficiency in delivering efficient and streamlined development processes.</p>
+            <p class="text-sm text-left text-primary-50 md:text-base">With more than two decades of experience in development, including over five years as a Tech Lead/Engineering Manager, I have refined my skills and expertise. While I began my journey with PHP, my focus has now shifted entirely to JavaScript/TypeScript, specifically ReactJS and NodeJS. I am a versatile and passionate professional, dedicated to finding solutions and constantly seeking opportunities for growth. Additionally, I possess hands-on experience with AWS DevOps and GitLab CI/CD, enhancing my proficiency in delivering efficient and streamlined development processes.</p>
             <!-- <div class="px-5 py-2 rounded-lg bg-primary-50 hover:bg-primary-300">
                 <p class="text-base font-bold text-primary-800">More about me</p>
             </div> -->
