--- a/src/pages/posts.astro
+++ b/src/pages/posts.astro
@@ -1,36 +1,23 @@
 ---
+import { getSortedEntriesFromCollection } from '@lib/util';
 import Layout from '@layouts/Layout.astro';
-import { getAllCategories, getEntriesByCategorySlug } from '@lib/util';
 
-export async function getStaticPaths() {
-	return (await getAllCategories()).map((category) => {
-		return {
-			params: { slug: category.slug },
-			props: { category },
-		};
-	});
-}
-
-const { slug } = Astro.params;
-const { category } = Astro.props;
-if (slug === undefined) return Astro.redirect('/404');
-
-const { entries } = await getEntriesByCategorySlug(slug);
-if (!entries || entries.length === 0) return Astro.redirect("/404");
+const entries = await getSortedEntriesFromCollection('post', 'blog');
 ---
+
 <Layout>
     <Fragment slot="head">
-        <title>Entries in the category: {category.name} - Jeroen van Wissen</title>
+        <title>Posts - Jeroen van Wissen</title>
         <meta content="website" property="og:type" />
-        <meta content={`Entries in the category: ${category.name} - Jeroen van Wissen`} property="og:title" />
-        <meta content={`Entries in the category: ${category.name} - Jeroen van Wissen`} name="description" />
-        <meta content={`Entries in the category: ${category.name} - Jeroen van Wissen`} property="og:description" />
-        <meta content={`${import.meta.env.SITE}/category/${slug}`} property="og:url" />
+        <meta content="Posts - Jeroen van Wissen" property="og:title" />
+        <meta content="Overview of all posts by Jeroen van Wissen" name="description" />
+        <meta content="Overview of all posts by Jeroen van Wissen" property="og:description" />
+        <meta content={`${import.meta.env.SITE}/posts`} property="og:url" />
         <meta content={`${import.meta.env.SITE}/images/og-image.webp`} property="og:image" />
         <meta content={`${import.meta.env.SITE}/images/og-image.webp`} property="twitter:image:src" />
-        <link href={`${import.meta.env.SITE}/category/${slug}`} rel="canonical" />
+        <link href={`${import.meta.env.SITE}/posts`} rel="canonical" />
     </Fragment>
-    <Fragment slot="title">{category.name} - Jeroen van Wissen</Fragment>
+    <Fragment slot="title">Posts - Jeroen van Wissen</Fragment>
     <div class="mx-auto">
         <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4">
             {
@@ -64,12 +51,12 @@ if (!entries || entries.length === 0) return Astro.redirect("/404");
 
 <style is:global>
     article h2 {
-        @apply mt-6 text-xl text-neutral-100
+        @apply mt-6 text-xl text-neutral-100;
     }
     article p {
-        @apply mt-3 mb-4 text-neutral-200 text-justify
+        @apply mt-3 mb-4 text-justify text-neutral-200;
     }
     article a {
-        @apply text-wissen-orange underline hover:text-wissen-blue
+        @apply text-wissen-orange underline hover:text-wissen-blue;
     }
 </style>
