--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,6 @@ import '@style/main.css';
                         <a href="/" class="my-2 lg:my-4 xl:my-6 inline-block" aria-label="Jeroen van Wissen"><WissenLogo /></a>
                     </div>
 
-                    <!--// Replace this with a nav component that has some actual routing in there to handle active states etc.. -->
                     <label class="md:hidden flex relative z-40 cursor-pointer px-0 py-6" for="mobile-menu">
                         <input class="peer hidden" type="checkbox" id="mobile-menu" />
                         <div class="relative z-50 block h-[1px] w-7 bg-primary-50 bg-transparent content-[''] before:absolute before:top-[-0.35rem] before:z-50 before:block before:h-full before:w-full before:bg-primary-50 before:transition-all before:duration-200 before:ease-out before:content-[''] after:absolute after:right-0 after:bottom-[-0.35rem] after:block after:h-full after:w-full after:bg-primary-50 after:transition-all after:duration-200 after:ease-out after:content-[''] peer-checked:bg-transparent before:peer-checked:top-0 before:peer-checked:w-full before:peer-checked:rotate-45 before:peer-checked:transform after:peer-checked:bottom-0 after:peer-checked:w-full after:peer-checked:-rotate-45 after:peer-checked:transform"></div>
@@ -33,9 +32,7 @@ import '@style/main.css';
                             <div class="float-right min-h-full w-[85%] bg-secondary-800 text-primary-50 px-6 pt-12 shadow-2xl">
                                 <menu>
                                     <li class="py-2"><a href="/" class="hover:text-primary-300">home</a></li>
-                                    <!-- <li class="py-2"><a href="/about" class="hover:text-primary-300">about me</a></li> -->
-                                    <li class="py-2"><a href="/blog" class="hover:text-primary-300">blog</a></li>
-                                    <!-- <li class="py-2"><a href="/projects" class="hover:text-primary-300">projects</a></li> -->
+                                    <li class="py-2"><a href="/posts" class="hover:text-primary-300">posts</a></li>
                                     <li class="py-2"><a href="https://31f-fotografie.nl" class="hover:text-primary-300">photography</a></li>
                                 </menu>
                             </div>
@@ -44,9 +41,7 @@ import '@style/main.css';
 
                     <ul class="hidden md:flex justify-center list-reset w-full md:w-auto py-4 md:py-0 text-primary-50 font-bold text-md xl:text-lg whitespace-nowrap">
                         <li class="pr-4 xl:pr-5"><a href="/" class="hover:text-primary-300">home</a></li>
-                        <!-- <li class="px-4 xl:px-5"><a href="/about" class="hover:text-primary-300">about me</a></li> -->
-                        <li class="px-4 xl:px-5"><a href="/blog" class="hover:text-primary-300">blog</a></li>
-                        <!-- <li class="px-4 xl:px-5"><a href="/projects" class="hover:text-primary-300">projects</a></li> -->
+                        <li class="px-4 xl:px-5"><a href="/posts" class="hover:text-primary-300">posts</a></li>
                         <li class="pl-4 xl:pl-5"><a href="https://31f-fotografie.nl" class="hover:text-primary-300">photography</a></li>
                     </ul>
                 </div>
