Add Roboto Mono for standard text

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ import '@style/main.css';
     <body class="bg-black">
         <div class="w-full border-b border-primary-900">
             <nav class="max-w-6xl mx-auto px-8">
-                <div class="flex flex-wrap items-center justify-between">
+                <div class="logo flex flex-wrap items-center justify-between">
                     <div class="flex justify-center px-2">
                         <a href="/" class="inline-block" aria-label=";// Logo"><Logo /></a>
                         <a href="/" class="inline-block px-2 text-quaternary-50 text-4xl font-extrabold italic" aria-label="Jeroen van Wissen">jeroenvanwissen</a>
