--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,17 +33,17 @@ const photos = await getLatestPhotoEntries();
                     class="w-1/3"
                 />
                 <div class="w-2/3">
-                    <div class="md:flex justify-center pt-10">
+                    <div class="md:flex justify-center pt-20">
                         <p class="text-3xl font-bold text-left text-primary-400">
-                            Hi!<br /><br />I’m <span class="text-primary-50">Jeroen</span>, Full Stack JavaScript/TypeScript Developer from the Netherlands.
+                            I’m <span class="text-primary-50">Jeroen</span>, Full Stack Developer from the Netherlands.
                         </p>
                     </div>
-                    <p class="text-sm text-left text-primary-50 md:text-base">Connect with me on <a href="https://linkedin.com/in/jeroenvanwissen" rel="me" title="Connect with me on LinkedIn" class="inline-block align-bottom pb-[2px]"><img src="/images/linkedin.png" alt="LinkedIn logo" class="h-5" /></a></p>
+                    <p class="text-sm text-left text-primary-50 md:text-base opacity-80">Connect with me on <a href="https://linkedin.com/in/jeroenvanwissen" rel="me" title="Connect with me on LinkedIn" class="inline-block align-bottom pb-[2px] pl-1"><img src="/images/linkedin.png" alt="LinkedIn logo" class="h-5" /></a></p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="w-full bg-primary-900">
+    <div class="w-full bg-black">
         <div>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-6xl mx-auto px-4 py-8">
                 {
