--- a/src/pages/posts.astro
+++ b/src/pages/posts.astro
@@ -1,8 +1,9 @@
 ---
 import { getSortedEntriesFromCollection } from '@lib/util';
 import Layout from '@layouts/Layout.astro';
+import PostBlock from '@components/PostBlock.astro';
 
-const entries = await getSortedEntriesFromCollection('post', 'blog');
+const posts = await getSortedEntriesFromCollection('post', 'blog');
 ---
 
 <Layout>
@@ -18,34 +19,16 @@ const entries = await getSortedEntriesFromCollection('post', 'blog');
         <link href={`${import.meta.env.SITE}/posts`} rel="canonical" />
     </Fragment>
     <Fragment slot="title">Posts - Jeroen van Wissen</Fragment>
-    <div class="mx-auto">
-        <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4">
+    <div class="w-full">
+      <div class="mx-auto max-w-6xl px-8 py-4">
+        <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-3">
             {
-                entries.map((entry: any) => (
-                    <div class="flex flex-col overflow-hidden rounded-lg shadow-lg h-full">
-                        <div class="flex flex-col grow justify-between bg-secondary-800 p-4">
-                            <div class="flex-1">
-                                <p class="pb-2 text-xs text-primary-50">
-                                    {entry.data.date.toLocaleString('en-US', {
-                                        day: 'numeric',
-                                        month: 'long',
-                                        year: 'numeric',
-                                        timeZone: 'Europe/Amsterdam'
-                                    })}
-                                </p>
-                                <p class="py-2 text-lg font-bold text-primary-50">{entry.data.title}</p>
-                                <p class="py-2 text-base text-primary-50">{entry.data.description}</p>
-                            </div>
-                            <div class="flex flex-row-reverse place-self-end">
-                                <a href={`/${entry.collection}/${entry.slug}`} class="text-md font-bold text-primary-800 rounded-lg bg-primary-50 px-4 pt-1.5 pb-2 shadow hover:bg-primary-300">
-                                    read more..
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+                posts.map((post: any) => (
+                  <PostBlock post={post} />
                 ))
             }
         </div>
+      </div>
     </div>
 </Layout>
 
@@ -57,6 +40,6 @@ const entries = await getSortedEntriesFromCollection('post', 'blog');
         @apply mt-3 mb-4 text-justify text-neutral-200;
     }
     article a {
-        @apply text-wissen-orange underline hover:text-wissen-blue;
+        @apply text-primary-400 underline hover:text-primary-400;
     }
 </style>
