--- a/src/pages/photography.astro
+++ b/src/pages/photography.astro
@@ -1,9 +1,10 @@
 ---
-import { getSortedEntriesFromCollection } from '@lib/util';
+import { getSortedPostsByType } from '@lib/util';
 import Layout from '@layouts/Layout.astro';
 import PhotoBlock from '@components/PhotoBlock.astro';
+import { Image } from 'astro:assets';
 
-const posts = await getSortedEntriesFromCollection('post', 'photo');
+const posts = await getSortedPostsByType('post', 'photo');
 ---
 
 <Layout>
@@ -20,6 +21,23 @@ const posts = await getSortedEntriesFromCollection('post', 'photo');
     </Fragment>
     <div class="w-full">
         <div class="mx-auto max-w-6xl px-8 py-4">
+            <div class="mx-auto container my-8 sm:columns-2 md:columns-3 lg:columns-4">
+                {
+                    posts.map((post) => (
+                        <Image
+                            src={post.data.image.url}
+                            alt={post.data.image.alt}
+                            format="avif"
+                            quality={50}
+                            class="rounded mb-4 border border-transparent hover:border-gray-300 transition-all duration-300 ease-in-out hover:shadow-lg grayscale hover:filter-none"
+                            loading="lazy"
+                        />
+                    ))
+                }
+            </div>
+
+<!--
+        
             <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-3">
             {
                 posts.map((post: any) => (
@@ -27,6 +45,7 @@ const posts = await getSortedEntriesFromCollection('post', 'photo');
                 ))
             }
             </div>
+//-->
         </div>
     </div>
 </Layout>
