--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,19 @@
 ---
-import { getAllSortedEntries, getLatestPhotoEntries } from '@lib/util';
+import { getSortedPostsByType } from '@lib/util';
 import Layout from '@layouts/Layout.astro';
 import { Image } from 'astro:assets';
 import { getImage } from 'astro:assets';
+import Header from '@components/Header.astro';
+import PostBlock from '@components/PostBlock.astro';
 
-const entries = await getAllSortedEntries();
-const photos = await getLatestPhotoEntries();
+const blogPosts = await getSortedPostsByType('post', 'blog');
+const photoPosts = await getSortedPostsByType('post', 'photo');
 
 ---
 
 <Layout>
     <Fragment slot="head">
-        <title>Jeroen van Wissen - Full Stack JavaScript/TypeScript Developer</title>
+        <title>Jeroen van Wissen - Full Stack Developer</title>
         <meta content="website" property="og:type" />
         <meta content="Jeroen van Wissen" property="og:title" />
         <meta content="Jeroen van Wissen - More than two decades of experience in development, including over five years as a Tech Lead/Engineering Manager" name="description" />
@@ -21,17 +23,10 @@ const photos = await getLatestPhotoEntries();
         <meta content={`${import.meta.env.SITE}/images/og-image.webp`} property="twitter:image:src" />
         <link href={import.meta.env.SITE} rel="canonical" />
     </Fragment>
-    <Fragment slot="title">Jeroen van Wissen</Fragment>
     <div class="w-full bg-primary-950">
         <div class="max-w-6xl mx-auto px-20 py-14 pb-8">
             <div class="flex gap-8 px-4">
-                <Image 
-                    src="/images/jeroenvanwissen.png" 
-                    alt="Jeroen van Wissen" 
-                    width={400}
-                    height={400}
-                    class="w-1/3"
-                />
+                <Image src="/images/jeroenvanwissen.png" alt="Jeroen van Wissen" width={400} height={400} class="w-1/3" />
                 <div class="w-2/3">
                     <div class="md:flex justify-center pt-20">
                         <p class="text-3xl font-bold text-left text-primary-400">
@@ -44,65 +39,42 @@ const photos = await getLatestPhotoEntries();
         </div>
     </div>
     <div class="w-full bg-black">
-        <div>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-6xl mx-auto px-4 py-8">
+        <div class="max-w-6xl mx-auto px-4 py-8">
+            <Header label="blog posts" />
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 {
-                    entries.slice(0, 2).map((entry) => (
-                        <article class="bg-primary-200--2 shadow-md p-6 diagonal-corners">
-                            <h2 class="text-xl font-bold mb-2 text-primary-400">
-                                <a href={`/post/${entry.slug}/`} class="hover:text-primary-500">
-                                    {entry.data.title}
-                                </a>
-                            </h2>
-                            <p class="text-primary-50 mb-4">
-                                {entry.data.description}
-                            </p>
-                            <div class="text-sm text-primary-500">
-                                {new Date(entry.data.date).toLocaleDateString()}
-                            </div>
-                        </article>
+                    blogPosts.slice(0, 3).map((post) => (
+                        <PostBlock post={post} />
                     ))
                 }
-                <article class="bg-primary-200--2 shadow-md p-6 diagonal-corners">
-                    <h2 class="text-xl font-bold mb-4 text-primary-400">Older Posts</h2>
-                    <ul class="space-y-3">
-                        {entries.slice(2, 7).map((entry) => (
-                            <li>
-                                <a href={`/post/${entry.slug}/`} class="text-primary-50 hover:text-primary-500">
-                                    {entry.data.title}
-                                </a>
-                            </li>
-                        ))}
-                    </ul>
-                </article>
+            </div>
+        </div>
+    </div>
+    <div class="w-full bg-tertiary-950">
+        <div class="max-w-6xl mx-auto px-4 py-8">
+            <Header label="projects" />
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+            
             </div>
         </div>
     </div>
     <div class="w-full bg-primary-950">
         <div class="photo-ribbon py-8">
             <div class="photo-ribbon-content">
-                {photos.map((photo) => (
-                    <a href={`/post/${photo.slug}/`} title={photo.data.title}>
-                        <Image 
-                            src={photo.data.image.url} 
-                            alt={photo.data.title}
-                            width={300}
-                            height={200}
-                            class="rounded-lg shadow-lg"
-                        />
-                    </a>
-                ))}
-                {photos.map((photo) => (
-                    <a href={`/post/${photo.slug}/`} title={photo.data.title}>
-                        <Image 
-                            src={photo.data.image.url} 
-                            alt={photo.data.title}
-                            width={300}
-                            height={200}
-                            class="rounded-lg shadow-lg"
-                        />
-                    </a>
-                ))}
+                {
+                    photoPosts.slice(0, 20).map((post) => (
+                            <a href={`/post/${post.slug}/`} title={post.data.title}>
+                                <Image src={post.data.image.url} alt={post.data.title} width={300} height={200} class="rounded-lg shadow-lg" />
+                            </a>
+                    ))
+                }
+                {
+                    photoPosts.slice(0, 20).map((post) => (
+                            <a href={`/post/${post.slug}/`} title={post.data.title}>
+                                <Image src={post.data.image.url} alt={post.data.title} width={300} height={200} class="rounded-lg shadow-lg" />
+                            </a>
+                    ))
+                }
             </div>
         </div>
     </div>
