--- a/src/components/PostBlock.astro
+++ b/src/components/PostBlock.astro
@@ -6,13 +6,13 @@ export interface Props {
 const { post } = Astro.props;
 ---
 
-<div class="bg-primary-200--2 shadow-md p-6 diagonal-corners">
-  <h2 class="text-xl font-bold mb-2 text-primary-400">
+<div class="bg-primary-200--5 shadow-md p-6 diagonal-corners">
+  <h2 class="text-lg font-bold mb-2 text-primary-400">
     <a href={`/post/${post.slug}`}>
       {post.data.title}
     </a>
   </h2>
-  <p>
+  <p class="text-md text-primary-50 opacity-60">
     {post.data.description}
   </p>
 </div>
