--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,9 +28,9 @@ const photoPosts = await getSortedPostsByType('post', 'photo');
             <div class="flex gap-8 px-4">
                 <Image src="/images/jeroenvanwissen.png" alt="Jeroen van Wissen" width={400} height={400} class="w-1/3" />
                 <div class="w-2/3">
-                    <div class="md:flex justify-center pt-20">
+                    <div class="pt-20">
                         <p class="text-3xl font-bold text-left text-primary-400">
-                            I’m <span class="text-primary-50">Jeroen</span>, Full Stack Developer from the Netherlands.
+                            I’m <span class="text-primary-50">Jeroen</span>,<br />Full Stack Developer<br />from the Netherlands
                         </p>
                     </div>
                     <p class="text-sm text-left text-primary-50 md:text-base opacity-80">Connect with me on <a href="https://linkedin.com/in/jeroenvanwissen" rel="me" title="Connect with me on LinkedIn" class="inline-block align-bottom pb-[2px] pl-1"><img src="/images/linkedin.png" alt="LinkedIn logo" class="h-5" /></a></p>
@@ -54,7 +54,7 @@ const photoPosts = await getSortedPostsByType('post', 'photo');
         <div class="max-w-6xl mx-auto px-4 py-8">
             <Header label="projects" />
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-            
+                <span class="text-md text-primary-50 opacity-80">project blocks come here</span>
             </div>
         </div>
     </div>
