--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,16 +24,15 @@ const photoPosts = await getSortedPostsByType('post', 'photo');
         <link href={import.meta.env.SITE} rel="canonical" />
     </Fragment>
     <div class="w-full bg-primary-950">
-        <div class="max-w-6xl mx-auto px-20 py-14 pb-8">
-            <div class="flex gap-8 px-4">
-                <Image src="/images/jeroenvanwissen.png" alt="Jeroen van Wissen" width={400} height={400} class="w-1/3" />
+        <div class="max-w-6xl mx-auto px-4 py-6 lg:px-20 lg:py-14 lg:pb-0">
+            <div class="flex gap-4 lg:gap-8 lg:px-4">
+                <Image src="/images/jeroenvanwissen.png" alt="Jeroen van Wissen" width={400} height={400} class="w-20 w-1/3" />
                 <div class="w-2/3">
-                    <div class="pt-20">
-                        <p class="text-3xl font-bold text-left text-primary-400">
+                    <div class="pt-4 lg:pt-20">
+                        <p class="text-md lg:text-3xl font-bold text-left text-primary-400">
                             I’m <span class="text-primary-50">Jeroen</span>,<br />Full Stack Developer<br />from the Netherlands
                         </p>
                     </div>
-                    <p class="text-sm text-left text-primary-50 md:text-base opacity-80">Connect with me on <a href="https://linkedin.com/in/jeroenvanwissen" rel="me" title="Connect with me on LinkedIn" class="inline-block align-bottom pb-[2px] pl-1"><img src="/images/linkedin.png" alt="LinkedIn logo" class="h-5" /></a></p>
                 </div>
             </div>
         </div>
