--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,29 +17,31 @@ import '@style/main.css';
     </head>
     <body class="bg-black">
         <div class="w-full border-b border-primary-900">
-            <nav class="max-w-6xl mx-auto px-8">
+            <nav class="max-w-6xl mx-auto px-2 lg:px-8">
                 <div class="logo flex flex-wrap items-center justify-between">
                     <div class="flex justify-center px-2">
                         <a href="/" class="inline-block" aria-label=";// Logo"><Logo /></a>
-                        <a href="/" class="inline-block px-2 text-quaternary-50 text-4xl font-extrabold italic" aria-label="Jeroen van Wissen">jeroenvanwissen</a>
+                        <a href="/" class="inline-block px-2 text-quaternary-50 text-xl lg:text-2xl xl:text-4xl font-extrabold italic" aria-label="Jeroen van Wissen">jeroenvanwissen</a>
                     </div>
 
-                    <!-- <label class="md:hidden flex relative z-40 cursor-pointer px-0 py-6" for="mobile-menu">
+                    <label class="lg:hidden flex relative z-40 cursor-pointer px-0 py-6" for="mobile-menu">
                         <input class="peer hidden" type="checkbox" id="mobile-menu" />
-                        <div class="relative z-50 block h-[1px] w-7 bg-primary-50 bg-transparent content-[''] before:absolute before:top-[-0.35rem] before:z-50 before:block before:h-full before:w-full before:bg-primary-50 before:transition-all before:duration-200 before:ease-out before:content-[''] after:absolute after:right-0 after:bottom-[-0.35rem] after:block after:h-full after:w-full after:bg-primary-50 after:transition-all after:duration-200 after:ease-out after:content-[''] peer-checked:bg-transparent before:peer-checked:top-0 before:peer-checked:w-full before:peer-checked:rotate-45 before:peer-checked:transform after:peer-checked:bottom-0 after:peer-checked:w-full after:peer-checked:-rotate-45 after:peer-checked:transform"></div>
+                        <div class="relative z-50 block h-[1px] w-7 bg-primary-50 bg-transparent content-[''] before:absolute before:top-[-0.35rem] before:z-50 before:block before:h-full before:w-full before:bg-primary-50 before:transition-all before:duration-200 before:ease-out before:content-[''] after:absolute after:right-0 after:bottom-[-0.35rem] after:block after:h-full after:w-full after:bg-primary-50 after:transition-all after:duration-200 after:ease-out after:content-[''] peer-checked:bg-transparent before:peer-checked:top-0 before:peer-checked:w-full before:peer-checked:rotate-45 before:peer-checked:transform after:peer-checked:bottom-0 after:peer-checked:w-full after:peer-checked:-rotate-45 after:peer-checked:transform" />
                         <div class="fixed inset-0 z-40 hidden h-full w-full bg-secondary-900/50 backdrop-blur-sm peer-checked:block">&nbsp;</div>
                         <div class="fixed top-0 right-0 z-40 h-full w-full translate-x-full overflow-y-auto overscroll-y-none transition duration-500 peer-checked:translate-x-0">
-                            <div class="float-right min-h-full w-[85%] bg-secondary-800 text-primary-50 px-6 pt-12 shadow-2xl">
+                            <div class="float-right min-h-full w-[85%] bg-primary-900 text-primary-50 px-6 pt-12 shadow-2xl">
                                 <menu>
-                                    <li class="py-2"><a href="/" class="text-base px-2 py-4 rounded-full bg-primary-400 hover:text-white">home</a></li>
-                                    <li class="py-2"><a href="/posts" class="text-base px-2 py-4 rounded-full hover:bg-primary-400 hover:text-white">posts</a></li>
-                                    <li class="py-2"><a href="https://31f-fotografie.nl" class="text-base px-2 py-4 rounded-full hover:bg-primary-400 hover:text-white">photography</a></li>
+                                    <NavItem href="/" label="home" />
+                                    <NavItem href="/photography" label="photography" />
+                                    <NavItem href="/posts" label="posts" />
+                                    <NavItem href="/projects" label="projects" />
+                                    <NavItem href="/resume" label="resume" />
                                 </menu>
                             </div>
                         </div>
-                    </label> -->
+                    </label>
 
-                    <ul class="hidden md:flex justify-center list-reset w-full md:w-auto py-4 md:py-0 px-4 text-md gap-4">
+                    <ul class="hidden lg:flex justify-center list-reset w-full md:w-auto py-4 md:py-0 px-0 xl:px-4 text-md gap-4">
                         <NavItem href="/" label="home" />
                         <NavItem href="/photography" label="photography" />
                         <NavItem href="/posts" label="posts" />
