--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,22 +31,22 @@ import '@style/main.css';
                         <div class="fixed top-0 right-0 z-40 h-full w-full translate-x-full overflow-y-auto overscroll-y-none transition duration-500 peer-checked:translate-x-0">
                             <div class="float-right min-h-full w-[85%] bg-primary-900 text-primary-50 px-6 pt-12 shadow-2xl">
                                 <menu>
-                                    <NavItem href="/" label="home" />
-                                    <NavItem href="/photography" label="photography" />
-                                    <NavItem href="/posts" label="posts" />
-                                    <NavItem href="/projects" label="projects" />
-                                    <NavItem href="/resume" label="resume" />
+                                    <NavItem href="/" label="home" id="home-m" />
+                                    <NavItem href="/photography" label="photography" id="photography-m" />
+                                    <NavItem href="/posts" label="posts" id="posts-m" />
+                                    <NavItem href="/projects" label="projects" id="projects-m" />
+                                    <NavItem href="/resume" label="resume" id="resume-m" />
                                 </menu>
                             </div>
                         </div>
                     </label>
 
                     <ul class="hidden lg:flex justify-center list-reset w-full md:w-auto py-4 md:py-0 px-0 xl:px-4 text-md gap-4">
-                        <NavItem href="/" label="home" />
-                        <NavItem href="/photography" label="photography" />
-                        <NavItem href="/posts" label="posts" />
-                        <NavItem href="/projects" label="projects" />
-                        <NavItem href="/resume" label="resume" />
+                        <NavItem href="/" label="home" id="home" />
+                        <NavItem href="/photography" label="photography" id="photography" />
+                        <NavItem href="/posts" label="posts" id="posts" />
+                        <NavItem href="/projects" label="projects" id="projects" />
+                        <NavItem href="/resume" label="resume" id="resume" />
                     </ul>
                 </div>
             </nav>
