Hero section fix

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,8 +28,8 @@ const photoPosts = await getSortedPostsByType('post', 'photo');
             <div class="flex gap-4 lg:gap-8 lg:px-4">
                 <Image src="/images/jeroenvanwissen.png" alt="Jeroen van Wissen" width={400} height={400} class="w-1/3" />
                 <div class="w-2/3">
-                    <div class="pt-6 lg:pt-20">
-                        <p class="text-sm lg:text-3xl font-bold text-left text-primary-400">
+                    <div class="pt-6 sm:pt-20">
+                        <p class="text-sm sm:text-xl md:text-2xl xl:text-3xl font-bold text-left text-primary-400">
                             I’m <span class="text-primary-50">Jeroen</span>,<br />Full Stack Developer<br />from the Netherlands
                         </p>
                     </div>
