--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,84 +1,120 @@
 ---
-import { getSortedPostsByType } from '@lib/util';
-import Layout from '@layouts/Layout.astro';
-import { Image } from 'astro:assets';
-import { getImage } from 'astro:assets';
-import Header from '@components/Header.astro';
-import PostBlock from '@components/PostBlock.astro';
+import { getSortedPostsByType } from "@lib/util";
+import Layout from "@layouts/Layout.astro";
+import { Image } from "astro:assets";
+import { getImage } from "astro:assets";
+import Header from "@components/Header.astro";
+import PostBlock from "@components/PostBlock.astro";
 
-const blogPosts = await getSortedPostsByType('post', 'blog');
-const photoPosts = await getSortedPostsByType('post', 'photo');
-
+const blogPosts = await getSortedPostsByType("post", "blog");
+const photoPosts = await getSortedPostsByType("post", "photo");
 ---
 
 <Layout>
-    <Fragment slot="head">
-        <title>Jeroen van Wissen - Full Stack Developer</title>
-        <meta content="website" property="og:type" />
-        <meta content="Jeroen van Wissen" property="og:title" />
-        <meta content="Jeroen van Wissen - More than two decades of experience in development, including over five years as a Tech Lead/Engineering Manager" name="description" />
-        <meta content="Jeroen van Wissen - More than two decades of experience in development, including over five years as a Tech Lead/Engineering Manager" property="og:description" />
-        <meta content={import.meta.env.SITE} property="og:url" />
-        <meta content={`${import.meta.env.SITE}/images/og-image.webp`} property="og:image" />
-        <meta content={`${import.meta.env.SITE}/images/og-image.webp`} property="twitter:image:src" />
-        <link href={import.meta.env.SITE} rel="canonical" />
-    </Fragment>
-    <div class="w-full bg-primary-950">
-        <div class="max-w-6xl mx-auto px-2 pt-4 lg:px-20 lg:pt-8">
-            <div class="flex gap-4 lg:gap-8 lg:px-4">
-                <Image src="/images/jeroenvanwissen.png" alt="Jeroen van Wissen" width={400} height={400} class="w-1/3" />
-                <div class="w-2/3">
-                    <div class="pt-6 sm:pt-20">
-                        <p class="text-sm sm:text-xl md:text-2xl xl:text-3xl font-bold text-left text-primary-400">
-                            I’m <span class="text-primary-50">Jeroen</span>,<br />Full Stack Developer<br />from the Netherlands
-                        </p>
-                    </div>
-                </div>
-            </div>
+  <Fragment slot="head">
+    <title>Jeroen van Wissen - Full Stack Developer</title>
+    <meta content="website" property="og:type" />
+    <meta content="Jeroen van Wissen" property="og:title" />
+    <meta
+      content="Jeroen van Wissen - More than two decades of experience in development, including over five years as a Tech Lead/Engineering Manager"
+      name="description"
+    />
+    <meta
+      content="Jeroen van Wissen - More than two decades of experience in development, including over five years as a Tech Lead/Engineering Manager"
+      property="og:description"
+    />
+    <meta content={import.meta.env.SITE} property="og:url" />
+    <meta
+      content={`${import.meta.env.SITE}/images/og-image.webp`}
+      property="og:image"
+    />
+    <meta
+      content={`${import.meta.env.SITE}/images/og-image.webp`}
+      property="twitter:image:src"
+    />
+    <link href={import.meta.env.SITE} rel="canonical" />
+  </Fragment>
+  <div class="w-full bg-primary-950">
+    <div class="max-w-6xl mx-auto px-2 pt-4 lg:px-20 lg:pt-8">
+      <div class="flex gap-4 lg:gap-8 lg:px-4">
+        <Image
+          src="/images/jeroenvanwissen.png"
+          alt="Jeroen van Wissen"
+          width={400}
+          height={400}
+          class="w-1/3"
+        />
+        <div class="w-2/3">
+          <div class="pt-6 sm:pt-20">
+            <p
+              class="text-sm sm:text-xl md:text-2xl xl:text-3xl font-bold text-left text-primary-400"
+            >
+              I’m <span class="text-primary-50">Jeroen</span>,<br />Full Stack
+              Developer<br />from the Netherlands
+            </p>
+          </div>
         </div>
+      </div>
     </div>
-    <div class="w-full bg-black">
-        <div class="max-w-6xl mx-auto px-2">
-            <Header label="blog posts" />
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-2 sm:gap-4 lg:gap-6">
-                {
-                    blogPosts.slice(0, 3).map((post) => (
-                        <PostBlock post={post} />
-                    ))
-                }
-            </div>
-        </div>
+  </div>
+  <div class="w-full bg-black">
+    <div class="max-w-6xl mx-auto px-2 pb-6">
+      <Header label="blog posts" color="quaternary" />
+      <div
+        class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-2 sm:gap-4 lg:gap-6"
+      >
+        {
+          blogPosts
+            .slice(0, 3)
+            .map((post) => <PostBlock post={post} color="quaternary" />)
+        }
+      </div>
     </div>
-    <div class="w-full bg-tertiary-950">
-        <div class="max-w-6xl mx-auto px-2">
-            <Header label="projects" />
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-2 sm:gap-4 lg:gap-6">
-                {
-                    blogPosts.slice(0, 3).map((post) => (
-                        <PostBlock post={post} />
-                    ))
-                }
-            </div>
-        </div>
+  </div>
+  <div class="w-full bg-tertiary-950">
+    <div class="max-w-6xl mx-auto px-2 pb-6">
+      <Header label="projects" color="tertiary" />
+      <div
+        class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-2 sm:gap-4 lg:gap-6"
+      >
+        {
+          blogPosts
+            .slice(0, 3)
+            .map((post) => <PostBlock post={post} color="tertiary" />)
+        }
+      </div>
     </div>
-    <div class="hidden w-full bg-primary-950">
-        <div class="photo-ribbon py-8">
-            <div class="photo-ribbon-content">
-                {
-                    photoPosts.slice(0, 20).map((post) => (
-                            <a href={`/post/${post.slug}/`} title={post.data.title}>
-                                <Image src={post.data.image.url} alt={post.data.title} width={300} height={200} class="rounded-lg shadow-lg" />
-                            </a>
-                    ))
-                }
-                {
-                    photoPosts.slice(0, 20).map((post) => (
-                            <a href={`/post/${post.slug}/`} title={post.data.title}>
-                                <Image src={post.data.image.url} alt={post.data.title} width={300} height={200} class="rounded-lg shadow-lg" />
-                            </a>
-                    ))
-                }
-            </div>
-        </div>
+  </div>
+  <div class="w-full bg-primary-950">
+    <div class="photo-ribbon py-8">
+      <div class="photo-ribbon-content">
+        {
+          photoPosts.slice(0, 20).map((post) => (
+            <a href={`/post/${post.slug}/`} title={post.data.title}>
+              <Image
+                src={post.data.image.url}
+                alt={post.data.title}
+                width={300}
+                height={200}
+                class="rounded-lg shadow-lg"
+              />
+            </a>
+          ))
+        }
+        {
+          photoPosts.slice(0, 20).map((post) => (
+            <a href={`/post/${post.slug}/`} title={post.data.title}>
+              <Image
+                src={post.data.image.url}
+                alt={post.data.title}
+                width={300}
+                height={200}
+                class="rounded-lg shadow-lg"
+              />
+            </a>
+          ))
+        }
+      </div>
     </div>
+  </div>
 </Layout>
