Fix color theming

--- a/src/components/PostBlock.astro
+++ b/src/components/PostBlock.astro
@@ -20,7 +20,7 @@ if (color === undefined) {
 ---
 
 <div
-  class={`bg-${color}-200--5 shadow-md p-4 sm:p-6 diagonal-corners border border-r-primary-400 border-t-primary-400 border-b-primary-800 border-l-primary-800`}
+  class={`bg-${color}-200/5 shadow-md p-4 sm:p-6 diagonal-corners border border-r-primary-400 border-t-primary-400 border-b-primary-800 border-l-primary-800`}
 >
   <div class={`text-xs text-${color}-50 opacity-40`}>
     {
@@ -55,7 +55,7 @@ if (color === undefined) {
 <!-- aaoa said that we should do bg at 24% and font full color ... and a tad more padding.. :/ -->
 <style>
   /*
-    bg-primary-200--5 bg-secondary-200--5 bg-tertiary-200-5 bg-quaternary-200--5
+    bg-primary-200/5 bg-secondary-200/5 bg-tertiary-200/5 bg-quaternary-200/5
     text-primary-900 text-secondary-900 text-tertiary-900 text-quaternary-900
     bg-primary-400 bg-secondary-400 bg-tertiary-400 bg-quaternary-400
     text-primary-400 text-secondary-400 bg-tertiary-400 text-quaternary-400
