--- a/src/components/PhotoBlock.astro
+++ b/src/components/PhotoBlock.astro
@@ -8,7 +8,7 @@ export interface Props {
 const { post } = Astro.props;
 ---
 
-<div class="bg-primary-200--2 shadow-md p-6 diagonal-corners">
+<div class="bg-primary-200/2 shadow-md p-6 diagonal-corners">
 	{ post.data.image && (
 		<Image
 			src={post.data.image.url}
